<resources>
    <string name="app_name">Cook Book</string>
    <string name="id_details">RecipeIdDetails</string>
    <string name="main_menu_to_search">SEARCH FOR RECIPES</string>
    <string name="main_menu_to_favorites">MY FAVORITE RECIPES</string>
    <string name="main_menu_to_about">ABOUT US</string>
    <string name="main_menu_sign_out">SIGN OUT</string>
    <string name="main_menu_to_exit">EXIT</string>
    <string name="ingredient">Ingredient: </string>
    <string name="searchBy">Search by:</string>
    <string name="selectedIngredients">Selected ingredients:</string>
    <string name="listCurrentlyEmpty">Your list is currently empty :(</string>
    <string name="queryString">QueryString</string>
    <string name="noRecipesMatching">There are no recipes that match your ingredients.</string>
    <string name="sadChef">Sad chef</string>
    <string name="cookingIsEasy">Cooking is easy!</string>
    <string name="noInternet">Please check your internet connection.</string>
    <string name="appPurposeText">- We made this application to help you find out new recipes that you have never seen before. By using this application you can easily mix your leftover ingredients and find tasty meals. If you feel like the recipe is good enough you can add it to your favorites list and access the recipe even without internet connection! </string>
    <string name="references">- API: www.food2fork.com\n- MEDIA: www.pexels.com\n</string>
    <string name="developedBy">- Hristijan Anastasovski \n- Ljuben Angelkoski </string>
    <string name="contactHristijan">anastasovski.h@gmail.com</string>
    <string name="contactLjuben">ljuben_angelkoski@live.com</string>
    <string name="signUpMessage">Not a member yet? <u>Sign up for free</u>!</string>
    <string name="signIn">SIGN IN</string>
    <string name="facebook_app_id">352522795382883</string>
    <string name="fb_login_protocol_scheme">fb352522795382883</string>
    <string name="admob_app_id">ca-app-pub-2112536401499963~6714872693</string>



</resources>
