<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <Button
        android:id="@+id/mainMenuToSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90sp"
        android:gravity="center"
        android:text="@string/main_menu_to_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/full_recipe_button"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/mainMenuToFavoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_to_favorites"
        app:layout_constraintBottom_toTopOf="@id/mainMenuToAboutButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuToSearchButton"
        android:background="@drawable/full_recipe_button"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/mainMenuToAboutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_to_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainMenuToExitButton"
        app:layout_constraintTop_toBottomOf="@id/mainMenuToFavoritesButton"
        android:background="@drawable/full_recipe_button"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/mainMenuToExitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_to_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainMenuToAboutButton"
        android:background="@drawable/full_recipe_button"
        android:textColor="#FFFFFF"/>
</android.support.constraint.ConstraintLayout>