<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectedIngredientsText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/selectedIngredients"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewSelectedIngredients"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ingredientText"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/ingredientText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ingredient"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewSelectedIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <EditText
        android:id="@+id/ingredientNameEditText"
        android:layout_width="172dp"
        android:layout_height="47dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:textSize="15sp"
        android:hint="Ingredient name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@id/ingredientText"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ingredientAddButton"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="8dp"
        android:background="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewSelectedIngredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toEndOf="@id/ingredientNameEditText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewSelectedIngredients"
        android:layout_width="match_parent"
        android:layout_height="280sp"
        android:layout_marginTop="80dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"

        app:layout_constraintTop_toBottomOf="@+id/ingredientNameEditText"


        tools:layout_editor_absoluteX="0dp"></android.support.v7.widget.RecyclerView>





    <TextView
        android:id="@+id/currentlyEmptyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/listCurrentlyEmpty"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewSelectedIngredients"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewSelectedIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewSelectedIngredients" />

    <Button
        android:id="@+id/searchForRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:background="@drawable/new_button"
        android:textColor="#5D6063"
        android:text="Search for recipes"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewSelectedIngredients"
        app:layout_constraintVertical_bias="0.36" />


    <android.support.design.widget.BottomNavigationView

        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFA500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:layout_editor_absoluteX="0dp"
        />





</android.support.constraint.ConstraintLayout>
